--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class = 'content'>
                     <h3>Reddit Scrapper</h3>
-                    <p>Memes or post from any subreddit, the bot is equipped with a Reddit scrapper which allows you to get posts from any subreddit you want ! (NSFW is automaticly deleted)</p>
+                    <p>Memes or post from any subreddit, the bot is equipped with a Reddit scrapper which allows you to get posts from any subreddit you want ! (NSFW is automatically deleted)</p>
                     <a href = '#'>Read More</a>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                         </div>
                         <div class = 'content'>
                             <h3>Complete Moderation</h3>
-                            <p>Even if the bot takes a lot in moderation by doing it automaticly, moderation is still a big part of the bot : Kick, Ban, Mute, Unban and many more are present !</p>
+                            <p>Even if the bot takes a lot in moderation by doing it automatically, moderation is still a big part of the bot : Kick, Ban, Mute, Unban and many more are present !</p>
                             <a href = '#'>Read More</a>
                         </div>
                 </div>
