--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>
             IntelliBot.ai
         </title>
+        <link rel="icon" 
+        type="image/png" 
+        href="circle-cropped.png">
         <link rel = "stylesheet", href = 'style.css'>
     </head>
     <body>
