--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class = "box">
                     <div class = 'icon'>
-                        <img width = '80px' src="reddit.png" class="fa">
+                        <img width = '80px' src="Reddit.png" class="fa">
                     </div>
                     <div class = 'content'>
                         <h3>
