--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <p>
                             By calculating TOXICITY, SEXUALLY_EXPLICIT and INSULT value of each messages sent, and acting in consequence, get your discord server safe !
                         </p>
-                        <a href="https://top.gg/bot/790587831352295474">Read More</a>
+                        <a href="https://discordbotlist.com/bots/dollar-intellibotai">Read More</a>
                     </div>
                 </div>
                 <div class = "box">
@@ -52,7 +52,7 @@
                         <p>
                             Memes , information or anything else, the bot is equipped with a Reddit scrapper which allows you to get posts from any subreddit you want ! (NSFW is automatically deleted)
                         </p>
-                        <a href="https://top.gg/bot/790587831352295474">Read More</a>
+                        <a href="https://discordbotlist.com/bots/dollar-intellibotai">Read More</a>
                     </div>
                 </div>
                 <div class = "box">
@@ -66,7 +66,7 @@
                         <p>
                             Utilites takes a big place into the bot : Weather System, Minecraft Server Informations, Server and Users informations...
                         </p>
-                        <a href="https://top.gg/bot/790587831352295474">Read More</a>
+                        <a href="https://discordbotlist.com/bots/dollar-intellibotai">Read More</a>
                     </div>
                 </div>
                 
